Unify Dockerfile and Dockerfile.copy

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,9 @@
 # the default machine type.
 
 # Build arguments:
-
+#
+# - `binaries` is the path to the directory containing the Linera
+#   binaries.  Leave unset to build the binaries from scratch.
 # - `environment` is the name of a runtime environment, and used to
 #   select the configuration.  The name of a directory in
 #   `/configuration`.
@@ -20,12 +22,16 @@
 #   `aarch64-unknown-linux-gnu`.
 
 # Stage 1 - Generate recipe file for dependencies
-FROM lukemathwalker/cargo-chef:latest-rust-slim AS chef
+
 ARG environment=k8s-local
 # Modern Docker provides TARGETPLATFORM and friends, but these do not
 # provide enough information to reconstruct the whole Rust target and
 # switching on them to map to a subset of targets seems unwise
 ARG target=x86_64-unknown-linux-gnu
+ARG binaries=
+ARG copy=${binaries:+_copy}
+
+FROM lukemathwalker/cargo-chef:latest-rust-slim AS chef
 
 FROM chef as planner
 
@@ -55,13 +61,13 @@ RUN cargo chef prepare --recipe-path recipe.json
 FROM chef AS cacher
 ARG target
 
-COPY --from=planner . .
-
 RUN apt-get update && apt-get install -y \
     pkg-config \
     libssl-dev \
     protobuf-compiler \
     clang
+
+COPY --from=planner . .
 
 RUN cargo chef cook --release --recipe-path recipe.json --target "$target"
 
@@ -69,14 +75,13 @@ RUN cargo chef cook --release --recipe-path recipe.json --target "$target"
 FROM chef as builder
 ARG target
 
-COPY --from=planner . .
-
 RUN apt-get update && apt-get install -y \
     pkg-config \
     libssl-dev \
     protobuf-compiler \
     clang
 
+COPY --from=planner . .
 COPY --from=cacher target target
 COPY --from=cacher /usr/local/cargo /usr/local/cargo
 
@@ -86,13 +91,30 @@ RUN cargo build --release \
     --bin linera-proxy \
     --bin linera-server \
     --bin linera-db \
-    --features scylladb \
+    --features scylladb
 
-RUN strip \
+RUN mv \
     target/"$target"/release/linera \
     target/"$target"/release/linera-proxy \
     target/"$target"/release/linera-server \
-    target/"$target"/release/linera-db
+    target/"$target"/release/linera-db \
+    ./
+
+
+RUN strip linera linera-proxy linera-server linera-db
+
+# Stage 3.5 - Optionally copy binaries instead of using the build
+# images above
+FROM scratch as builder_copy
+ARG binaries
+COPY \
+    "$binaries"/linera \
+    "$binaries"/linera-server \
+    "$binaries"/linera-proxy \
+    "$binaries"/linera-db \
+    ./
+
+FROM builder$copy as binaries
 
 # Stage 4 - Setup running environment for container
 FROM debian:latest
@@ -101,14 +123,14 @@ ARG target
 
 RUN apt-get update && apt-get install -y libssl-dev
 
-COPY --from=builder \
-     target/"$target"/release/linera \
-     target/"$target"/release/linera-server \
-     target/"$target"/release/linera-proxy \
-     target/"$target"/release/linera-db \
-     ./
+COPY --from=binaries \
+    linera \
+    linera-server \
+    linera-proxy \
+    linera-db \
+    ./
 
-COPY --chmod 755 \
+COPY --chmod=755 \
     docker/server-entrypoint.sh \
     docker/server-init.sh \
     configuration/"$environment"/validator_1.toml \
