--- a/kubernetes/linera-validator/values-dev-gcp.yaml
+++ b/kubernetes/linera-validator/values-dev-gcp.yaml
@@ -1,8 +1,10 @@
 # Values for charts linera-validator for the dev validator on GCP.
 
-lineraImage: us-docker.pkg.dev/linera-io-dev/linera-docker-repo/zefchain-gcp-test:0.1
+lineraImage: us-docker.pkg.dev/linera-io-dev/linera-docker-repo/linera-test-local:latest
 lineraImagePullPolicy: Always
-logLevel: "info"
+logLevel: "debug"
+staticIpGcpName: "dev-validator-1"
+proxyPort: 443
 
 loki-stack:
   loki:
@@ -20,3 +22,4 @@ loki-stack:
     config:
       clients:
         - url: http://linera-core-loki:3100/loki/api/v1/push
+
