--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ rand = "0.8.5"
 rand07 = { package = "rand", version = "0.7.3" }
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
+rcgen = "0.11.1"
 reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
 rocksdb = "0.21.0"
 serde = { version = "1.0.190", features = ["derive"] }
@@ -97,7 +98,7 @@ test-case = "3.2.1"
 test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
 test-strategy = "0.2.1"
 thiserror = "1.0.50"
-tonic = "0.8"
+tonic = { version = "0.8", features = ["tls", "tls-roots", "transport"] }
 tonic-build = "0.8"
 tonic-health = "0.8"
 tokio = "1.33.0"
