--- a/configuration/prod/validator_1.toml
+++ b/configuration/prod/validator_1.toml
@@ -1,12 +1,14 @@
 server_config_path = "server_1.json"
-host = "34.151.215.158"
-port = 19100
+host = "validator-1.devnet.linera.net"
+port = 443
 metrics_host = "validator-1"
 metrics_port = 21100
 internal_host = "validator-1"
 internal_port = 20100
-external_protocol = "Grpc"
-internal_protocol = "Grpc"
+[external_protocol]
+Grpc = "Tls"
+[internal_protocol]
+Grpc = "ClearText"
 
 [[shards]]
 host = "shards-0.shards.default.svc.cluster.local"
