--- a/linera-indexer/lib/Cargo.toml
+++ b/linera-indexer/lib/Cargo.toml
@@ -26,7 +26,7 @@ axum = { workspace = true, features = ["ws", "headers"] }
 bcs = { workspace = true }
 futures = { workspace = true }
 graphql-ws-client = { version = "0.5", features = ["client-graphql-client"] }
-graphql_client = { version = "0.13", features = [ "reqwest" ] }
+graphql_client = { version = "0.13", features = [ "reqwest-rustls" ] }
 hyper = "0.14"
 linera-base = { workspace = true }
 linera-chain = { workspace = true }
