--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -16,7 +16,7 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [features]
 test = ["anyhow", "tokio/macros", "tokio/parking_lot"]
-aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-smithy-http", "aws-types"]
+aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-smithy-http", "aws-smithy-types", "aws-types"]
 scylladb = ["scylla"]
 db_timings = []
 metrics = ["dep:hex"]
@@ -52,6 +52,7 @@ aws-config = { workspace = true, optional = true }
 aws-sdk-dynamodb = { workspace = true, optional = true }
 aws-sdk-s3 = { workspace = true, optional = true }
 aws-smithy-http = { workspace = true, optional = true }
+aws-smithy-types = { workspace = true, optional = true }
 aws-types = { workspace = true, optional = true }
 tokio-test = { workspace = true }
 
