Parameterised the validator domain name in the ingress

--- a/kubernetes/linera-validator/templates/ingress.yaml
+++ b/kubernetes/linera-validator/templates/ingress.yaml
@@ -22,5 +22,5 @@ metadata:
   name: managed-cert
 spec:
   domains:
-    - validator-1.devnet.linera.net
+    - {{ .Values.validatorDomainName }}
 {{- end }}
