--- a/test-cloudbuild-local.yaml
+++ b/test-cloudbuild-local.yaml
@@ -1,5 +1,6 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker:latest'
+  entrypoint: 'docker'
   args: [ 'build', '-t', 'us-docker.pkg.dev/linera-io-dev/linera-docker-repo/linera-test-local:latest', '-f', 'docker/Dockerfile', '.' ]
 images:
 - 'us-docker.pkg.dev/linera-io-dev/linera-docker-repo/linera-test-local:latest'
