Fix helm install when running Cloud built image locally

--- a/kubernetes/linera-validator/values-local-with-cloud-build.yaml
+++ b/kubernetes/linera-validator/values-local-with-cloud-build.yaml
@@ -7,14 +7,10 @@ logLevel: "debug"
 loki-stack:
   loki:
     enabled: true
+    isDefault: false
     persistence:
       enabled: true
       size: 1Gi
-  grafana:
-    enabled: true
-    sidecar:
-      datasources:
-        enabled: true
   promtail:
     enabled: true
     config:
