--- a/kubernetes/linera-validator/templates/config.yaml
+++ b/kubernetes/linera-validator/templates/config.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: validator-config
 data:
-  validator.config: {{ .Values.validatorConfig | nindent 4 }}
+  serverConfig: {{ .Files.Get .Values.validator.serverConfig | quote |indent 4 }}
+  genesisConfig: {{ .Files.Get .Values.validator.genesisConfig | quote | indent 4 }}
