--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -59,7 +59,10 @@ jobs:
         # Build the docker image copying the already built binaries
       - name: Build Docker and deploy locally with Kind
         run: |
-          cd kubernetes/linera-validator
+          cd kubernetes/linera-validator/working
+          linera-server generate --validators ../../configuration/k8s-local/validator_1.toml --committee committee.json
+          linera --wallet /tmp/wallet.json --storage /tmp/rocksdb:linera.db create-genesis-config 10 --genesis genesis.json --initial-funding 100 --committee committee.json
+          cd ..
           ./build_and_redeploy.sh --copy
       - name: Port Forward
         run: |
