--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -59,11 +59,8 @@ jobs:
         # Build the docker image copying the already built binaries
       - name: Build Docker and deploy locally with Kind
         run: |
-          cd kubernetes/linera-validator/working
-          ../../../target/release/linera-server generate --validators ../../../configuration/k8s-local/validator_1.toml --committee committee.json
-          ../../../target/release/linera --wallet /tmp/wallet.json --storage rocksdb:/tmp/linera.db create-genesis-config 10 --genesis genesis.json --initial-funding 100 --committee committee.json
-          cd ..
-          ./build_and_redeploy.sh --copy
+          cd kubernetes/linera-validator
+          ./build_and_redeploy.sh --copy --linera-bins-dir ../../target/release
       - name: Port Forward
         run: |
           kubectl get pods | grep proxy | awk '{ print $1 }' | xargs -I % kubectl port-forward % 19100:19100 &
