--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,12 +63,14 @@ generic-array = { version = "0.14.7", features = ["serde"] }
 hex = "0.4.3"
 pin-project = "1.1.3"
 http = "0.2.9"
+insta = "1.34.0"
 log = "0.4.20"
 lru = "0.9.0"
 linked-hash-map = "0.5.6"
 once_cell = "1.18.0"
 oneshot = "0.1.6"
 parse_duration = "2.1.1"
+prettyplease = "0.2.15"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
