--- a/linera-views-derive/Cargo.toml
+++ b/linera-views-derive/Cargo.toml
@@ -17,3 +17,7 @@ heck = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full", "extra-traits"] }
+
+[dev-dependencies]
+insta = { workspace = true }
+prettyplease = { workspace = true }
