--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -32,8 +32,10 @@ permissions:
 
 jobs:
 
-  build:
+  test:
     runs-on: ubuntu-latest-16-cores
+    timeout-minutes: 30
+
     steps:
     - uses: actions/checkout@v3
     - uses: Twey/setup-rust-toolchain@v1
