--- a/.github/workflows/explorer.yml
+++ b/.github/workflows/explorer.yml
@@ -33,6 +33,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest-16-cores
+    timeout-minutes: 30
+
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
