--- a/.github/workflows/explorer.yml
+++ b/.github/workflows/explorer.yml
@@ -32,7 +32,7 @@ permissions:
 jobs:
 
   test:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 30
 
     steps:
