CI: run linters on default runner

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,7 +85,7 @@ jobs:
         cargo test -p linera-witty --features wasmer,wasmtime
 
   lint:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
