Revert "CI: run DB tests with --release"
This reverts commit f3284a6ddc0c269d9260b5751162a139aaff2a23.

--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -49,7 +49,7 @@ jobs:
         cargo build --locked --release --target wasm32-unknown-unknown
     - name: Build
       run: |
-        cargo build --locked --release --features aws
+        cargo build --locked --features aws
     - name: Setup local DynamoDB instance
       run: |
         docker run --rm -d --name local-dynamodb -p 8000:8000/tcp amazon/dynamodb-local
@@ -60,4 +60,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: test
         LOCALSTACK_ENDPOINT: http://localhost:8000
       run: |
-        cargo test --locked --release --features aws -- dynamo
+        cargo test --locked --features aws -- dynamo
