CI: add timeouts and reduce CPU costs (#1253)
* CI: comment out the rest of the empty `docrs` job

* CI: add timeout to `cargo test` jobs

* CI: reduce number of cores to balance waiting time

* CI: run linters on default runner

--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -29,7 +29,8 @@ permissions:
 jobs:
 
   local-kind-deployment-integration-test:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
         with:
