--- a/.github/workflows/explorer.yml
+++ b/.github/workflows/explorer.yml
@@ -32,7 +32,9 @@ permissions:
 jobs:
 
   test:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
