--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -32,8 +32,10 @@ permissions:
 
 jobs:
 
-  build:
-    runs-on: ubuntu-latest-16-cores
+  test:
+    runs-on: ubuntu-latest-8-cores
+    timeout-minutes: 30
+
     steps:
     - uses: actions/checkout@v3
     - uses: Twey/setup-rust-toolchain@v1
