Codify linting toolchain (#1251)
* Codify linting toolchain in a toolchain file

Moves the nightly toolchain we use for linting out of a GitHub action
and into a dedicated linting `rust-toolchain.toml` file.

rustup doesn't currently support specifying a toolchain file, though
[it will soon](https://github.com/rust-lang/rustup/issues/2686), so we
hack around it by keeping the toolchain files in separate directories.

* Add a Nix devShell for the linting toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -103,11 +103,11 @@ jobs:
       run: >
         find linera-* -name '*.rs' -a -not -wholename '*/target/*' -print0
         | xargs -0 -L1 ./scripts/target/release/check_copyright_header
+    - name: Put lint toolchain file in place
+      run: |
+        ln -sf rust-toolchain.lint.toml rust-toolchain.toml
     - uses: Twey/setup-rust-toolchain@v1
-      with:
-        toolchain: nightly-2023-10-22
-        target: wasm32-unknown-unknown
-        components: clippy rustfmt
+      working-directory: toolchains/lint
     - name: Install cargo-machete
       run: |
         cargo install cargo-machete --locked
