Revert "Codify linting toolchain (#1251)"
This reverts commit 7ec6f673c2c654dd9357fb135fa3cdba5f73a5af.

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,1 +1,5 @@
-toolchains/build/rust-toolchain.toml
+[toolchain]
+channel = "1.73.0"
+components = [ "clippy", "rustfmt", "rust-src" ]
+targets = [ "wasm32-unknown-unknown" ]
+profile = "minimal"
