Use `AsyncMutex` for `ChainClient`s
Update all usages.

--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -29,7 +29,7 @@ async-trait = { workspace = true }
 bcs = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
-linera-base = { workspace = true }
+linera-base = { workspace = true, features = ["locks"] }
 linera-chain = { workspace = true }
 linera-execution = { workspace = true }
 linera-storage = { workspace = true }
