--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -50,6 +50,7 @@ linera-views = { workspace = true }
 once_cell = { workspace = true }
 parse_duration = { workspace = true }
 pathdiff = { workspace = true, optional = true }
+portpicker = { workspace = true }
 prometheus = { workspace = true }
 rand = { workspace = true }
 rand07 = { workspace = true }
