Creative commit message

--- a/kubernetes/linera-validator/values-local.yaml
+++ b/kubernetes/linera-validator/values-local.yaml
@@ -4,6 +4,7 @@
 lineraImage: linera-test:latest
 lineraImagePullPolicy: Never
 logLevel: "debug"
+# logLevel: "trace"
 proxyPort: 19100
 numShards: 10
 
