--- a/kubernetes/linera-validator/templates/proxy.yaml
+++ b/kubernetes/linera-validator/templates/proxy.yaml
@@ -1,3 +1,4 @@
+# The service exposing the proxy to clients.
 apiVersion: v1
 kind: Service
 metadata:
@@ -17,6 +18,7 @@ spec:
 
 ---
 
+# The service exposing the proxy to shards.
 apiVersion: v1
 kind: Service
 metadata:
@@ -64,18 +66,6 @@ spec:
           env:
             - name: RUST_LOG
               value: {{ .Values.logLevel }}
-            - name: MY_POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: MY_POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: MY_POD_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
           volumeMounts:
             - name: config
               mountPath: "/config"
