Renamed the proxy service to proxy external

--- a/kubernetes/linera-validator/templates/ingress.yaml
+++ b/kubernetes/linera-validator/templates/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   defaultBackend:
     service:
-      name: proxy
+      name: proxy-external
       port:
         number: 443
 
