--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -23,6 +23,7 @@ metrics = ["dep:hex"]
 
 [dependencies]
 anyhow = { workspace = true }
+async-graphql = { workspace = true }
 async-lock = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
