--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ bincode = "1.3.3"
 bytes = "1.5.0"
 cargo_toml = "0.15.3"
 chrono = "0.4.31"
+clap = { version = "3", features = ["derive", "env"] }
 colored = "2.0.4"
 comfy-table = "6.2.0"
 convert_case = "0.6.0"
@@ -96,7 +97,6 @@ serde-reflection = "0.3.6"
 sha3 = "0.10.8"
 similar-asserts = "1.5.0"
 static_assertions = "1.1.0"
-structopt = "0.3.26"
 syn = "2.0.39"
 tempfile = "3.8.1"
 test-case = "3.2.1"
