--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 [features]
 default = ["wasmer", "rocksdb"]
 test = ["linera-views/test"]
-benchmark = ["linera-base/test"]
+benchmark = ["linera-base/test", "dep:fungible", "dep:concurrent-queue", "dep:port-selector"]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
 wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb", "linera-storage/rocksdb"]
@@ -34,9 +34,11 @@ clap = { workspace = true }
 clap-markdown = { workspace = true }
 colored = { workspace = true }
 comfy-table = { workspace = true }
+concurrent-queue = { workspace = true, optional = true }
 current_platform = "0.2.0"
 dirs = { workspace = true }
 file-lock = "2.1.10"
+fungible = { workspace = true, optional = true }
 futures = { workspace = true }
 hex = { workspace = true }
 http = { workspace = true }
@@ -51,6 +53,7 @@ linera-storage = { workspace = true }
 linera-views = { workspace = true }
 parse_duration = { workspace = true }
 pathdiff = { workspace = true, optional = true }
+port-selector = { workspace = true, optional = true}
 prometheus = { workspace = true }
 rand = { workspace = true }
 rand07 = { workspace = true }
@@ -115,3 +118,4 @@ path = "src/schema_export.rs"
 [[bin]]
 name = "linera-benchmark"
 path = "src/benchmark.rs"
+required-features = ["benchmark"]
