--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ clap = { version = "4", features = ["cargo", "derive", "env"] }
 clap-markdown = "0.1.3"
 colored = "2.0.4"
 comfy-table = "6.2.0"
+concurrent-queue = "2.4.0"
 convert_case = "0.6.0"
 criterion = "0.4.0"
 custom_debug_derive = "0.5.1"
@@ -72,6 +73,7 @@ linked-hash-map = "0.5.6"
 once_cell = "1.18.0"
 oneshot = "0.1.6"
 parse_duration = "2.1.1"
+port-selector = "0.1.6"
 prettyplease = "0.2.15"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
