--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ bytes = "1.5.0"
 cargo_toml = "0.15.3"
 chrono = "0.4.31"
 clap = { version = "4", features = ["cargo", "derive", "env"] }
+clap-markdown = "0.1.3"
 colored = "2.0.4"
 comfy-table = "6.2.0"
 convert_case = "0.6.0"
