--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -31,6 +31,7 @@ bcs = { workspace = true }
 cargo_toml = "0.15.3"
 chrono = { workspace = true }
 clap = { workspace = true }
+clap-markdown = { workspace = true }
 colored = { workspace = true }
 comfy-table = { workspace = true }
 current_platform = "0.2.0"
