--- a/linera-sdk/wasm-tests/Cargo.toml
+++ b/linera-sdk/wasm-tests/Cargo.toml
@@ -11,4 +11,5 @@ futures = "0.3.29"
 linera-sdk = { path = "..", features = ["test"] }
 linera-views = { path = "../../linera-views" }
 log = "0.4.20"
+serde_json = "1.0.107"
 webassembly-test = "0.1.0"
