--- a/linera-sdk/wasm-tests/Cargo.toml
+++ b/linera-sdk/wasm-tests/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dev-dependencies]
-async-trait = "0.1.74"
-bcs = "0.1.6"
-futures = "0.3.29"
-linera-sdk = { path = "..", features = ["test"] }
-linera-views = { path = "../../linera-views" }
-log = "0.4.20"
-serde_json = "1.0.107"
-webassembly-test = "0.1.0"
+async-trait = { workspace = true }
+bcs = { workspace = true }
+futures = { workspace = true }
+linera-sdk = { workspace = true, features = ["test"] }
+linera-views = { workspace = true }
+log = { workspace = true }
+serde_json = { workspace = true }
+webassembly-test = { workspace = true }
