Speed up `find_received_certificates`.
Look them up locally first before trying to download certificates.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -508,6 +508,10 @@ NodeError:
       SubscriptionFailed:
         STRUCT:
           - status: STR
+    19:
+      LocalNodeQuery:
+        STRUCT:
+          - error: STR
 Operation:
   ENUM:
     0:
