--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -15,7 +15,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: Fail loudly
+    - name: Fail loudly, II
       run: |
         >&2 echo WORKFLOW INTENTIONALLY FAILING
         exit 1
