Check for copyright header in examples
Ensure CI notifies if any source code files in the `examples` directory
is missing a copyright header.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -110,7 +110,7 @@ jobs:
         cargo build --locked --release
     - name: Check Copyright headers
       run: >
-        find linera-* -name '*.rs' -a -not -wholename '*/target/*' -print0
+        find linera-* examples -name '*.rs' -a -not -wholename '*/target/*' -print0
         | xargs -0 -L1 ./scripts/target/release/check_copyright_header
     - name: Put lint toolchain file in place
       run: |
