Fix infinite loop in `process_inbox` in case of failed messages (#1421)
* add message action: accept or explicitly reject

* fix: reject faulty incoming messages instead of skipping them

* replace is_skippable by !is_protected + hide the feature from Wasm applications

* rename ChainError::UnskippableMessage

* prevent rejection of protected messages

* improve error block construction in client

* nit: create function Event::is_skippable() for future extensions

* Apply suggestions from code review

Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>
Signed-off-by: Mathieu Baudet <1105398+ma2bd@users.noreply.github.com>

---------

Signed-off-by: Mathieu Baudet <1105398+ma2bd@users.noreply.github.com>
Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -337,7 +337,7 @@ Event:
     - authenticated_signer:
         OPTION:
           TYPENAME: Owner
-    - is_skippable: BOOL
+    - is_protected: BOOL
     - timestamp:
         TYPENAME: Timestamp
     - message:
@@ -380,6 +380,8 @@ IncomingMessage:
         TYPENAME: Origin
     - event:
         TYPENAME: Event
+    - action:
+        TYPENAME: MessageAction
 LiteCertificate:
   STRUCT:
     - value:
@@ -427,6 +429,12 @@ Message:
           - application_id:
               TYPENAME: ApplicationId
           - bytes: BYTES
+MessageAction:
+  ENUM:
+    0:
+      Accept: UNIT
+    1:
+      Reject: UNIT
 MessageId:
   STRUCT:
     - chain_id:
@@ -537,7 +545,7 @@ OutgoingMessage:
     - authenticated_signer:
         OPTION:
           TYPENAME: Owner
-    - is_skippable: BOOL
+    - is_protected: BOOL
     - message:
         TYPENAME: Message
 Owner:
